--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
-  "@types/node": "^24.9.2",
-  "@types/react": "^18.0.38",
-  "@types/react-dom": "^18.0.11",
+    "@types/node": "^24.9.2",
+    "@types/react": "^18.0.38",
+    "@types/react-dom": "^18.0.11",
+    "eslint": "^9.39.0",
+    "eslint-config-next": "^16.0.1",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
